--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <meta charset="UTF-8">
             <meta name="description" content="Portfolio">
             <meta name="keywords" content="HTML, CSS, JavaScript">
+            <link rel="stylesheet" href="css/index.css">
         </head>
 
         <body>
