--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
         </head>
 
         <body>
+            <nav>
+                <ul>
+                    <li> <a href="#About">About</a></li>
+                    <li> <a href="#Experience">Experience</a></li>
+                    <li> <a href="#Skills">Skills</a></li>
+                    <li> <a href="#Projects">Projects</a></li>
+                    <li> <a href="#Connect">Connect</a></li>
+                </ul>
+            </nav>
+
+
             <h1>Ivan Zadvornyi</h1>
 
             <section id="About">
@@ -24,6 +35,20 @@
                     <li>I am studying HTML, CSS, JavaScript</li>
                     <li>Minimal work experience at the beginner level!</li>
                     <li>I am creating a personal portfolio using web development tools</li>
+                </ul>
+            </section>
+
+            <section id="Skills">
+                <h2>Skills</h2>
+                <ul>
+                    <li> </li>
+                </ul>
+            </section>
+
+            <section id="Projects">
+                <h2>Projects</h2>
+                <ul>
+                    <li> </li>
                 </ul>
             </section>
 
