add Job and Dates

--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
             </section>
 
             <section id="Experience">
+                <div class="experience-block">
+                    <div class="experience-header">
+                        <div class="job-title">
+
+                </div>
+
+                <h2>Job-title</h2>
+                <ul>
+                    <li>Engineer designer</li>
+                    <li>Engineer designer</li>
+                    
+                </ul>
+
+                <h2>Dates worked</h2>
+                <ul>
+                    <li>01/02/2025</li>
+                    <li>02/02/2025</li>
+                    
+                </ul>
+
                 <h2>Experience</h2>
                 <ul>
                     <li>I am studying the course: Introduction to programming</li>
@@ -36,6 +56,7 @@
                     <li>Minimal work experience at the beginner level!</li>
                     <li>I am creating a personal portfolio using web development tools</li>
                 </ul>
+                </div>
             </section>
 
             <section id="Skills">
