--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             <section id="Experience">
                 <div class="experience-block">
                     <div class="experience-header">
-                        <div class="job-title">
+                        <div class="dates worked">
 
                 </div>
 
                 <h2>Job-title</h2>
                 <ul>
-                    <li>Engineer designer</li>
-                    <li>Engineer designer</li>
+                    <li>Engineer</li>
+                    <li>Engineer</li>
                     
                 </ul>
 
